chapter two project one page 54
all challenges completed

--- a/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/GeoQuiz/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="correct_toast">Correct!!!</string>
     <string name="incorrect_toast">Incorrect!!!</string>
     <string name="next_button">Next</string>
+    <string name="prev_button">Prev</string>
     
     <!-- Questions -->
     <string name="question_australia">Canberra is the capital of Australia.</string>
